# burst-sketch

./: .gitignore  README.md
cpu/: CAIDAAnalysis.h  CMakeLists.txt  README.md  main.cc
cpu/Benchmark/: CAIDABenchmark.h  NetWorkBenchmark.h  WebPageBenchmark.h
cpu/BurstDetector/: Abstract.h  Bitmap.h  BurstSketch.h  BurstSketchAbstract.h  CMSketch.h  CorrectDetector.h  DynamicBurstSketch.h  InsideBurst.h  Param.h  Stage.h
cpu/Common/: BOBHash.h  Burst.h  Mmap.h  hash.h  murmur3.cc  murmur3.h
cpu/Dataset/: CAIDADataset.h  NetWorkDataset.h  WebDataset.h
cpu/PriorWork/: CMPBE1.h  CMPBE2.h  Pla.h  Stair.h  TopicSketch.h
flink/: README.md
flink/burstsketch/: BurstDetectionJob.java  BurstDetector.java  BurstParams.java  RunningTrack.java  Snapshot.java
flink/statefulDetector/: BurstDetectionJob.java  BurstDetector.java  BurstParams.java
